--- a/src/components/wrapper.scss
+++ b/src/components/wrapper.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,600&display=swap');
 .wrapper {
   min-height:100vh;
   width: 100vw;
@@ -32,18 +33,25 @@
     width: 100%;
   }
   h2 {
-    font-family: 'Glacial-B';
-    font-size: 42px;
-    text-transform: uppercase;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 48px;
     color: #000;
-    text-shadow: #A7B6B5 0 0 0;
+    text-shadow: #3b3b3b 0 0 0;
+    font-weight: 300;
+    span {
+      font-weight: 600;
+      font-style: italic;
+      font-size: 46px !important;
+    }
+    line-height: 1.4;
+    text-align: right;
   }
-  p {
+  p, a {
     font-family: 'Glacial';
-    font-size: 36px;
+    font-size: 32px;
     text-transform: none;
     text-shadow: #A7B6B5 0 0 0;
-    font-weight: 100;
+    font-weight: 400;
     margin: 4px auto;
   }
   h3 {
@@ -65,5 +73,63 @@
     left: 0;
     background-color: rgb(234, 204, 194);
     background-position: -.65em 0;
+  }
+}
+.right {
+  position: absolute;
+  top: 18%;
+  right: 18%;
+  height: 20%;
+  z-index: 10;
+}
+.simple-trans-main > div {
+  cursor: pointer;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 800;
+  font-size: 25em;
+  will-change: transform, opacity;
+  text-shadow: 0px 2px 40px #00000020, 0px 2px 5px #00000030;
+  .flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    height: 74%;
+    margin-right: 10rem;
+  }
+  h2 {
+    font-size: 38px;
+    color: #ECF7FF;   
+    line-height: 1.4;
+    text-align: right;
+    width: 100%;
+  }
+  p, a {
+    font-family: 'Glacial';
+    font-size: 32px;
+    text-transform: none;
+    text-shadow: #A7B6B5 0 0 0;
+    font-weight: 400;
+    margin: 4px auto;
+  }
+  h3 {
+    font-family: 'Glacial';
+    font-size: 24px;
+  }
+  p, a {
+    font-family: 'Glacial';
+    font-size: 28px;
+    text-transform: none;
+    font-weight: 400;
+    margin: 4px auto;
+    width: 100%;
+    color: #ECF7FF;
+    text-align: right;
   }
 }
