--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -1,119 +1,127 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,900|Playfair+Display:400,400i,700,900,900i&display=swap');
 .hero-wrapper {
-  height: 100vh;
-  width: 100vw;
-  background-blend-mode: darken;
-  background: url('../images/bg-img.jpg'), linear-gradient(90deg, rgba(155, 155, 155, 0) 0%, rgba(0,0,0,0.45) 100%) center/cover no-repeat;
+  background: url('../images/bg-img.png') center/cover no-repeat;
   position: relative;
+  display: flex;
+  flex-flow: row nowrap;
+  align-content: center;
+  align-items: center;
+  justify-content: flex-start;
+}
+.overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top:0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: .6;
+  background-color: white;
+  z-index: 10;
 }
 .frosted {
-  height: 68%;
-  min-width: 64%;
-  background: inherit;
-  display: flex;
-  flex-flow: row wrap;
-  align-content: space-between;
-  justify-content: flex-start;
-  position: absolute;
-  border-radius: 12px;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  left: 42%;
-  padding: 4%;
-  overflow: hidden;
-  &:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0; 
-    bottom: 0;
-    margin: -12px;
-    box-shadow: inset 0 0 0 3000px rgba(255,255,255,0.5);
-    filter: blur(8px);
-    background: inherit;
-    z-index: -1;
-  }
-  h1 {
-    font-family: 'Playfair Display', serif;
-    font-size: 88px;
-    letter-spacing: .3;
-    font-weight: 900;
-    color: #3c5947;
-    width: 100%;
-    text-align: left;
-    span {
-      font-family: 'Playfair Display', serif;
-      font-size: 42px;
-      font-weight: 400;
-      font-style: italic;
-      color: #3c5947;
-      font-weight: normal;
-      text-align: left;
-      display: block;
-      margin-top: 12px;
+  text-align: left;
+  padding-left: 4vw;
+  position: relative;
+  z-index: 20 !important;
+}
+.secondary {
+  max-width: 80%;
+  margin: auto;
+  &.map-section {
+    .flex {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-flow: row wrap;
+    }
+    p {
+      width: 30%;
+      div {
+        font-size: 16px;
+        line-height: 1.14;
+      }
     }
   }
-  p {
-    font-size: 24px;
-    font-family: 'Playfair Display', serif;
-    color: #3c5947;
-    font-weight: 700;
-    line-height: 1.4;
-    width: 100%;
-    margin-bottom: 0;
+}
+.secondary h1 {
+  font-size: 82px;
+  text-align: center;
+  margin-bottom: 32px;
+}
+.maps {
+  width: 64%;
+}
+h1 {
+  font-family: 'Selima', serif;
+  font-size: 204px;
+  letter-spacing: .3;
+  color: #2D789D;
+  width: 100%;
+  margin-bottom: 0;
+  span {
+    font-family: 'Glacial', sans-serif;
+    font-size: 42px;
+    font-weight: 400;
+    color: #A7B6B5;
+    display: block;
+    margin-top: 12px;
   }
-} 
+}
+p {
+  font-size: 24px;
+  font-family: 'Glacial', serif;
+  color: #3c5947;
+  line-height: 1.4;
+  width: 100%;
+  text-transform: lowercase;
+  margin-bottom: 0;
+}
 .buttons {
   width: 40%;
   display: flex;
-  justify-content: space-between;
-  margin: 16px auto -12px;
+  justify-content: flex-start;
+  margin: 16px 0 -12px;
 }
 button {
-  padding: 12px 24px;
+  padding: 18px 54px;
   cursor: pointer;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
+  font-family: 'Glacial', sans-serif;
+  font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 20px;
   background-color: transparent;
-  border: 1px solid  #eaccc2;
-  color:  #eaccc2;
+  border: 1px solid  #A7B6B5;
+  color:  #A7B6B5;
   border-radius: 8px;
   transition: all .3s ease;
   &:hover {
-    border: 1px solid #3c5947;
-    color: #3c5947;
+    border: 1px solid #2d789d;
+    color: #2d789d;
   }
-  &:first-of-type {
-    background-color: #eaccc2;
-    color: #3c5947;
-    border: 1px solid #eaccc2; 
+  &.primary {
+    color: #3C5947;
+    border: 3px solid #3C5947; 
     &:hover {
-      background-color: #3c5947;
-      color: #eaccc2;
-      border: 1px solid #3c5947;
+      background-color: #2d789d;
+      color: white;
+      border: 3px solid #2d789d;
     }
   }
+}
+#fp-nav ul li a span {
+  background-color: #70885D !important;
 }
 a {
   position: relative;
   letter-spacing: 1px;
+  font-family: 'Glacial', sans-serif;
   transition: all .3s ease;
-  &:after {
-    content: '';
-    position: absolute;
-    width: 0%;
-    bottom: -2px;
-    height: 3px;
-    background-color: white;
-    right: 0;
-    transition: all .3s ease;
-  }
+  font-weight: bold;
+  color: #70885D !important;
   &:hover {
-    color: white !important;
+    color: #3C5947 !important;
     &:after {
       width: 100%;
       left: 0;
