--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -24,23 +24,93 @@
   padding-left: 4vw;
   position: relative;
   z-index: 20 !important;
+  h1 {
+    @media(max-width: 800px) {
+      height: 384px;
+      display: flex;
+      justify-content: space-between;
+      flex-flow: row wrap;
+      align-items: center;
+      text-align: center;
+      padding-right: 4vw;
+    }
+  }
 }
 .secondary {
   max-width: 80%;
   margin: auto;
-  &.map-section {
-    .flex {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-flow: row wrap;
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  .flex2 {
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    display: flex;
+    @media(max-width: 900px) {
+      flex-wrap: wrap;
     }
-    p {
-      width: 30%;
-      div {
-        font-size: 16px;
-        line-height: 1.14;
+    div {
+      width: 50%;
+      padding: 2rem;
+      @media(max-width: 900px) {
+        width: 100%;
+        padding: 1rem 0;
       }
+    }
+  }
+  a {
+    font-size: 32px;
+    font-weight: 900;
+    text-decoration: underline;
+  }
+  .flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-flow: row wrap;
+    padding: 4rem 0;
+    @media(max-width: 800px) {
+      padding: 2rem 0;
+    }
+    &.center {
+      justify-content: center;
+    }
+  }
+  &.map-section {
+    .content {
+      width: 30%;
+      @media(max-width: 800px) {
+        width: 100%;
+      }
+    }
+    .content, p {
+      font-size: 16px;
+      font-family: 'Glacial', serif;
+      color: #3c5947;
+      line-height: 1.4;
+      text-transform: lowercase;
+      margin-bottom: 0;
+    }
+  }
+}
+#fp-nav.fp-show-active a.active + .fp-tooltip {
+  background-color: white;
+}
+#fp-nav ul li {
+  .fp-tooltip {
+    color: #3c5947 !important;
+    font-family: 'Glacial', sans-serif;
+    text-transform: uppercase;
+    font-weight: 900;
+    letter-spacing: 1.2px;
+    padding: 4px;
+    padding-top: 0;
+    border-radius: 4px 8px;
+    @media(max-width: 600px) {
+      display: none;
     }
   }
 }
@@ -48,9 +118,78 @@
   font-size: 82px;
   text-align: center;
   margin-bottom: 32px;
+  @media(max-width: 1000px) {
+    font-size: 64px;
+  }
 }
 .maps {
   width: 64%;
+  div:first-of-type {
+    @media(max-width: 600px) {
+      height: 300px !important;
+    }
+  }
+  @media(max-width: 800px) {
+    width: 100%;
+    order: 2;
+    padding-top: 4rem;
+  }
+   @media(max-width: 600px) {
+    padding-top: 2rem;
+  }
+}
+.form {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  form {
+    width: 476px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: left;
+    color: #3c5947;
+    @media(max-width: 800px) {
+      width: 100%; 
+    }
+    input, textarea {
+      border: 2px solid #A7B6B5;
+      border-radius: 8px;
+      font-family: 'Glacial', serif;
+      color: #3c5947;
+    }
+    input:not([type="radio"]) {
+      width: 100%;
+      margin: 12px auto;
+    }
+    input[type="radio"] {
+      justify-self: flex-start;
+      margin: 12px 0px;
+      font-family: 'Glacial', serif;
+      color: #3c5947;
+    }
+    textarea {
+      width: 100%;
+      margin: 12px auto;
+      height: 84px;
+    }
+    label {
+      width: 100%;
+      font-family: 'Glacial', serif;
+      color: #3c5947;
+      font-size: 20px;
+    }
+    span {
+      margin-left: 4px;
+      margin-right: 12px;
+      font-family: 'Glacial', serif;
+    }
+    button {
+      margin-left: auto;
+    }
+  }
 }
 h1 {
   font-family: 'Selima', serif;
@@ -59,6 +198,25 @@ h1 {
   color: #2D789D;
   width: 100%;
   margin-bottom: 0;
+  @media(max-width: 1000px) {
+    font-size: 124px;
+    text-align: center;
+    span {
+      font-size: 36px;
+    }
+  }
+  @media(max-width: 800px) {
+    font-size: 94px;
+    span {
+      font-size: 32px;
+    }
+  }
+  @media(max-width: 460px) {
+    font-size: 84px;
+    span {
+      font-size: 28px;
+    }
+  }
   span {
     font-family: 'Glacial', sans-serif;
     font-size: 42px;
@@ -66,6 +224,18 @@ h1 {
     color: #A7B6B5;
     display: block;
     margin-top: 12px;
+  }
+}
+h2 {
+  font-size: 42px;
+  font-family: 'Glacial', sans-serif;
+  font-weight: bold;
+  color: #3c5947;
+  @media(max-width: 800px) {
+    font-size: 36px;
+  }
+   @media(max-width: 600px) {
+    font-size: 24px;
   }
 }
 p {
@@ -76,6 +246,9 @@ p {
   width: 100%;
   text-transform: lowercase;
   margin-bottom: 0;
+  @media(max-width: 600px) {
+    font-size: 18px;
+  }
 }
 .buttons {
   width: 40%;
@@ -91,23 +264,14 @@ button {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 20px;
-  background-color: transparent;
-  border: 1px solid  #A7B6B5;
-  color:  #A7B6B5;
   border-radius: 8px;
   transition: all .3s ease;
+  color: #3C5947;
+  border: 2px solid #3C5947; 
   &:hover {
-    border: 1px solid #2d789d;
-    color: #2d789d;
-  }
-  &.primary {
-    color: #3C5947;
-    border: 3px solid #3C5947; 
-    &:hover {
-      background-color: #2d789d;
-      color: white;
-      border: 3px solid #2d789d;
-    }
+    background-color: #3C5947;
+    color: white;
+    border: 2px solid #3C5947;
   }
 }
 #fp-nav ul li a span {
