--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -26,7 +26,7 @@
   z-index: 20 !important;
   h1 {
     @media(max-width: 800px) {
-      height: 384px;
+      height: 364px;
       display: flex;
       justify-content: space-between;
       flex-flow: row wrap;
@@ -65,6 +65,9 @@
     font-size: 32px;
     font-weight: 900;
     text-decoration: underline;
+    @media(max-width: 600px) {
+      font-size: 28px;
+    }
   }
   .flex {
     display: flex;
@@ -91,8 +94,11 @@
       font-family: 'Glacial', serif;
       color: #3c5947;
       line-height: 1.4;
-      text-transform: lowercase;
       margin-bottom: 0;
+      @media(max-width: 600px) {
+        font-size: 16px;
+        line-height: 1.2;
+      }
     }
   }
 }
@@ -121,12 +127,16 @@
   @media(max-width: 1000px) {
     font-size: 64px;
   }
+  @media(max-width: 600px) {
+    margin-bottom: 12px;
+    font-size: 38px;
+  }
 }
 .maps {
   width: 64%;
   div:first-of-type {
     @media(max-width: 600px) {
-      height: 300px !important;
+      height: 220px !important;
     }
   }
   @media(max-width: 800px) {
@@ -135,7 +145,7 @@
     padding-top: 4rem;
   }
    @media(max-width: 600px) {
-    padding-top: 2rem;
+    padding-top: 1rem;
   }
 }
 .form {
@@ -212,7 +222,7 @@ h1 {
     }
   }
   @media(max-width: 460px) {
-    font-size: 84px;
+    font-size: 74px;
     span {
       font-size: 28px;
     }
@@ -234,8 +244,9 @@ h2 {
   @media(max-width: 800px) {
     font-size: 36px;
   }
-   @media(max-width: 600px) {
-    font-size: 24px;
+  @media(max-width: 600px) {
+    font-size: 20px;
+    margin-bottom: 8px;
   }
 }
 p {
@@ -244,10 +255,10 @@ p {
   color: #3c5947;
   line-height: 1.4;
   width: 100%;
-  text-transform: lowercase;
   margin-bottom: 0;
   @media(max-width: 600px) {
-    font-size: 18px;
+    font-size: 16px;
+    line-height: 1.2;
   }
 }
 .buttons {
@@ -272,6 +283,10 @@ button {
     background-color: #3C5947;
     color: white;
     border: 2px solid #3C5947;
+  }
+  @media(max-width: 600px) {
+    padding: 12px 32px;
+    font-size: 16px;
   }
 }
 #fp-nav ul li a span {
