--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -65,6 +65,7 @@
     font-size: 32px;
     font-weight: 900;
     text-decoration: underline;
+    text-transform: lowercase;
     @media(max-width: 600px) {
       font-size: 28px;
     }
