--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -89,6 +89,13 @@
       @media(max-width: 800px) {
         width: 100%;
       }
+      h2 {
+        margin-bottom: 4px;
+        font-size: 28px;
+        @media(max-width: 600px) {
+          font-size: 18px;
+        }
+      }
     }
     .content, p {
       font-size: 16px;
@@ -117,7 +124,7 @@
     padding-top: 0;
     border-radius: 4px 8px;
     @media(max-width: 600px) {
-      display: none;
+      display: none !important;
     }
   }
 }
