--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -89,13 +89,6 @@
       @media(max-width: 800px) {
         width: 100%;
       }
-      h2 {
-        margin-bottom: 4px;
-        font-size: 28px;
-        @media(max-width: 600px) {
-          font-size: 18px;
-        }
-      }
     }
     .content, p {
       font-size: 16px;
@@ -154,6 +147,7 @@
   }
    @media(max-width: 600px) {
     padding-top: 1rem;
+    display: none;
   }
 }
 .form {
